Fixed card heading text alignment

--- a/css/how-it-works.css
+++ b/css/how-it-works.css
@@ -33,15 +33,24 @@ body {
 }
 
 .step {
+  position: relative;
+  background-color: #ceefef;
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
+
+  border-radius: 1.6rem;
 }
 
+/* .step-heading-container {
+  padding-left: 2rem;
+  padding-right: 2rem;
+} */
+
 .step-content {
-  position: relative;
-  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
-  background-color: #b5d5d5;
+  background-color: #ceefef;
   padding: 3.2rem 4.8rem;
   border-radius: 1.6rem;
 }
+
 .number {
   color: #fff;
   font-size: 1.4rem;
@@ -53,7 +62,6 @@ body {
   width: 2.5rem;
   border-radius: 50%;
   position: absolute;
-  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.25);
   top: 0;
   right: 50%;
   transform: translate(50%, -50%);
@@ -72,12 +80,17 @@ body {
 }
 
 .step-heading {
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   font-weight: 900;
   line-height: 1.3;
   color: #222;
   text-align: center;
-  margin-bottom: 3rem;
+  /* margin-bottom: 3rem; */
+}
+.step-heading-container {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 3.2rem;
 }
 
 .step-img {
